--- a/app/index.html
+++ b/app/index.html
@@ -15,12 +15,12 @@
 <html>
 <head>
     <title>Sample app</title>
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 	<div class='center'>
 		<h1>Jenkins CI/CD Pipeline v10.0</h1>
-		<img src="{{url_for('static', filename='pipeline.png')}}" align="middle" />
+		<img src="{{url_for('static', filename='pipeline.jpg')}}" align="middle" />
 		<h1>You are calling me from {{request.remote_addr}}</h1>
 	</div>
 </body>
